--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
     <div class="quote">
       “ I’ve been interested in coding for a while but never taken the jump, until now.
       I couldn’t recommend this course enough. I’m now in the job of my dreams and so
-      excited about the future. ” <br>
+      excited about the future. ” <br> <br>
 
-      <span><strong>Tanya Sinclair</strong> UX Engineer</span>
+      <strong>Tanya Sinclair</strong>
+      <span> UX Engineer</span>
     </div>
     <div class="image">
       <img src="images/image-tanya.jpg" alt="Portrait">
     </div>
   </div>
 
-  
+
 
 
   <!-- “ If you want to lay the best foundation possible I’d recommend taking this course.
@@ -40,7 +41,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">NAzim Phillips</a>.
+    Coded by <a href="#">Nazim Phillips</a>.
   </div>
 </body>
 
