--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="image">
       <img src="images/image-tanya.jpg" alt="Portrait">
     </div>
+    <img src="images/pattern-bg.svg" alt="background">
   </div>
 
 
