--- a/index.html
+++ b/index.html
@@ -1,49 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+    <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+  </head>
 
-  <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+  <body>
+    <div class="container">
+      <div class="quote">
+        “ I’ve been interested in coding for a while but never taken the jump,
+        until now. I couldn’t recommend this course enough. I’m now in the job
+        of my dreams and so excited about the future. ” <br />
+        <br />
 
-</head>
+        <strong>Tanya Sinclair</strong>
+        <span> UX Engineer</span>
+      </div>
 
-<body>
+      <div class="image">
+        <img src="images/image-tanya.jpg" alt="Portrait" />
+      </div>
+      <img src="images/pattern-bg.svg" alt="background" />
 
-  <div class="container">
-    <div class="quote">
-      “ I’ve been interested in coding for a while but never taken the jump, until now.
-      I couldn’t recommend this course enough. I’m now in the job of my dreams and so
-      excited about the future. ” <br> <br>
-
-      <strong>Tanya Sinclair</strong>
-      <span> UX Engineer</span>
+      <div class="arrows">
+        <div class="arrowL">
+          <img src="images/icon-prev.svg" alt="Previous" />
+        </div>
+        <div class="arrowR">
+          <img src="images/icon-next.svg" alt="Next" />
+        </div>
+      </div>
     </div>
-    <div class="image">
-      <img src="images/image-tanya.jpg" alt="Portrait">
-    </div>
-    <img src="images/pattern-bg.svg" alt="background">
-  </div>
+    
 
-
-
-
-  <!-- “ If you want to lay the best foundation possible I’d recommend taking this course.
+    <!-- “ If you want to lay the best foundation possible I’d recommend taking this course.
   The depth the instructors go into is incredible. I now feel so confident about
   starting up as a professional developer. ”
 
   John Tarkpor
   Junior Front-end Developer -->
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Nazim Phillips</a>.
-  </div>
-</body>
-
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Nazim Phillips</a>.
+    </div>
+  </body>
 </html>
