--- a/index.html
+++ b/index.html
@@ -18,38 +18,27 @@
 
   <body>
     <div class="container">
-      <div class="quote">
-        “ I’ve been interested in coding for a while but never taken the jump,
-        until now. I couldn’t recommend this course enough. I’m now in the job
-        of my dreams and so excited about the future. ” <br />
-        <br />
-
-        <strong>Tanya Sinclair</strong>
-        <span> UX Engineer</span>
-      </div>
+      <div class="quote"></div>
+      <strong class="name"></strong>
+        <span class="profession"></span>
+      
 
       <div class="image">
-        <img src="images/image-tanya.jpg" alt="Portrait" />
+        <img src="" alt="Portrait" />
       </div>
-      <img src="images/pattern-bg.svg" alt="background" />
 
-      <div class="arrows">
-        <div class="arrowL">
-          <img src="images/icon-prev.svg" alt="Previous" />
-        </div>
-        <div class="arrowR">
-          <img src="images/icon-next.svg" alt="Next" />
-        </div>
+      <img src="images/pattern-bg.svg" alt="background" />
+    </div>
+
+    <div class="arrows">
+      <div class="arrowL" onclick="prev()">
+        <img src="images/icon-prev.svg" alt="Previous" />
+      </div>
+      <div class="arrowR" onclick="next()">
+        <img src="images/icon-next.svg" alt="Next" />
       </div>
     </div>
-    
-
-    <!-- “ If you want to lay the best foundation possible I’d recommend taking this course.
-  The depth the instructors go into is incredible. I now feel so confident about
-  starting up as a professional developer. ”
-
-  John Tarkpor
-  Junior Front-end Developer -->
+  
 
     <div class="attribution">
       Challenge by
@@ -57,5 +46,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Nazim Phillips</a>.
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
